<resources>
    <string name="app_name">Google books search</string>
    <string name="book_hint">Enter book title</string>
    <string name="name_button">Search</string>
    <string name="book_title">Book title</string>
    <string name="book_author">Authors</string>
    <string name="book_date">Date</string>
    <string name="book_pages">Pages</string>
    <string name="book_rating">Rating</string>
</resources>